--- a/Pebble_Data_R/supervisord.conf
+++ b/Pebble_Data_R/supervisord.conf
@@ -17,8 +17,8 @@ user=root                 ; default is current user, required if root
 environment=
 	REDIS_IP="localhost",
 	RTGRAPH_IP="localhost",
-	RELAY_ID="25",
-	PEBBLE_DATA_LOC="/media/card/rPebble/"
+	RELAY_ID="r105",
+	PEBBLE_DATA_LOC="/media/card/rtest/"
 
 ; The rpcinterface:supervisor section must remain in the config file for
 ; RPC (supervisorctl/web interface) to work.  Additional interfaces may be
@@ -34,18 +34,18 @@ supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 [supervisorctl]
 serverurl=unix:///tmp/supervisor.sock ; use a unix:// URL  for a unix socket
 
-;[program:pebble_connect_0]
-;command=python /root/pebbledata/pebble_connect.py 0 5000
-;stopasgroup=true
-;priority=2
-;autostart=true
-;autorestart=true
+[program:pebble_connect_0]
+command=python /root/pebbledata/pebble_connect.py 0 5000
+stopasgroup=true
+priority=2
+autostart=true
+autorestart=true
 
-;[program:pebble_ls_0]
-;command=python /root/pebbledata/pebble_log_and_stream.py 0 5000
-;priority=3
-;autostart=true
-;autorestart=true
+[program:pebble_ls_0]
+command=python /root/pebbledata/pebble_log_and_stream.py 0 5000
+priority=3
+autostart=true
+autorestart=true
 
 ;[program:pebble_connect_1]
 ;command=python /root/pebbledata/pebble_connect.py 1 5001
@@ -60,12 +60,12 @@ serverurl=unix:///tmp/supervisor.sock ; use a unix:// URL  for a unix socket
 ;autostart=true
 ;autorestart=true
 
-;[program:pebble_bind]
-;command=/root/pebbledata/bind_rfcomm.sh
-;user=root
-;priority=1
-;autostart=true
-;startsecs=0
+[program:pebble_bind]
+command=/root/pebbledata/bind_rfcomm.sh
+user=root
+priority=1
+autostart=true
+startsecs=0
 
 ;[program:state_monitor]
 ;command=/root/pebbledata/state_monitor.py
