--- a/Pebble_Data_R/supervisord.conf
+++ b/Pebble_Data_R/supervisord.conf
@@ -17,7 +17,7 @@ user=root                 ; default is current user, required if root
 environment=
 	REDIS_IP="localhost",
 	RTGRAPH_IP="localhost",
-	RELAY_ID="r105",
+	RELAY_ID="rtest",
 	PEBBLE_DATA_LOC="/media/card/rtest/"
 
 ; The rpcinterface:supervisor section must remain in the config file for
@@ -72,3 +72,11 @@ startsecs=0
 ;priority=4
 ;autostart=true
 ;autorestart=true
+
+[program:rReadSensors]
+command=python /root/besi-relay-station/BESI_LOGGING_R/rReadSensors.py
+user=root
+priority=1
+autostart=true
+autorestart=true
+
