--- a/BESI_LOGGING_R/config
+++ b/BESI_LOGGING_R/config
@@ -1,3 +1,4 @@
-BaseStation_IP=191.168.0.100
-relayStation_ID=9020
-10044
+BaseStation_IP=191.168.0.157
+relayStation_ID=10004
+Wearable=Pixie
+PebbleFolder=r102
